force-app/main/default/objects/Survey_Question__c/fields/Contact_NPS_Question__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This question is used as a NPS score on the contact who answered the survey</description>
    <label>Contact NPS Question</label>
    <type>Checkbox</type>
</CustomField>