force-app/main/default/objects/Survey_Question__c/fields/NPS_Promoter_Count__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter_Count__c</fullName>
    <label>NPS Promoter Count</label>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.NPS_Response__c</field>
        <operation>greaterThan</operation>
        <value>8</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>