force-app/main/default/objects/Survey_Question__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <formula>IF( ISPICKVAL(Type__c, &#39;NPS--Horizontal&#39;), 
(( NPS_Promoter_Count__c /  Total_Responses__c ) * 100 ) - ((  NPS_Detractor_Count__c /  Total_Responses__c  ) * 100 ) ,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>