force-app/main/default/objects/Survey_Question__c/fields/RowLabelLeft__c.field-meta.xml
<CustomField>
    <fullName>RowLabelLeft__c</fullName>
    <inlineHelpText>A label that will be displayed at the top label of the row</inlineHelpText>
    <label>RowLabelLeft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>