force-app/main/default/objects/Survey_Question__c/fields/RowLabelRight__c.field-meta.xml
<CustomField>
    <fullName>RowLabelRight__c</fullName>
    <inlineHelpText>A label that will be displayed at the top right of the row</inlineHelpText>
    <label>RowLabelRight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>